
**************************************************
*                                                *
*	CHANGELOG: CMS_GEM_Analysis_Framework        *
*	VERSION: 2.1.4                               *
*	LAST UPDATE: Sept 10 2016                    *
*                                                *
**************************************************

Update: September 11th 2016
==================================================
->Honor their memory
->Added new class QualityControl::Uniformity::VisualizeComparison for making comparison plots across different framework output files
->Added new class QualityControl::Uniformity::ParameterLoaderComparison for setting necessary inputs in the QualityControl::Uniformity::RunSetp struct
->QualityControl::Uniformity::VisualizeComparison inherits from QualityControl::Uniformity::Visualizer
->Public method QualityControl::Uniformity::ParameterLoaderRun::loadParametersRun() renamed to loadParameters()
->QualityControl::Uniformity::ParameterLoaderRun has two new private methods loadParametersRun() & loadParametersCompare() for setting up different run modes
->Updated QualityControl::Uniformity::RunSetup to have additional data members for setting up VisualizeComparison

Update: September 10th 2016
==================================================
->Added QualityControl::Timing::HistoSetup::fHisto_BinWidth for storing bin width of histograms
->QualityControl::Uniformity::ParameterLoaderAnalysis::loadAnalysisParametersHistograms() will calculate the histogram bin width for each HistoSetup identified
->Adding overloaded method QualityControl::Uniformity::AnalyzeResponseUniformity::isQualityFit() for accepting/rejecting a fit
->QualityControl::Uniformity::AnalyzeResponseUniformityClusters::fitHistos() will now only attempt a fit if the histogram integral is non-zero in the fit range