@@ -8,8 +8,8 @@
         Cut_ClusterADC_Min = '250';
         Cut_ClusterMulti_Min = '0';
         Cut_ClusterMulti_Max = '20';
-        Cut_ClusterSize_Min = '2';
-        Cut_ClusterSize_Max = '3';
+        Cut_ClusterSize_Min = '1';
+        Cut_ClusterSize_Max = '20';
         Cut_ClusterTime_Min = '6';
         Cut_ClusterTime_Max = '27';
         #Selection Cuts - Hit
@@ -49,28 +49,28 @@
             #Fit_Range = '500, 5500';
             #For ClustSize Sel 1 to 20, and 2 to X for X = {3,6,10,15,20} - Peak w/partial BKG
             #-----------------
-            Fit_Formula = '[0]*TMath::CauchyDist(x, [1], [2])+pol5(3)';
-            Fit_Formula_Sig = '[0]*TMath::CauchyDist(x, [1], [2])';
-            Fit_Formula_Sig_Param_Idx_Range = '0,2';
-            Fit_Formula_Bkg = 'pol5';
-            Fit_Formula_Bkg_Param_Idx_Range = '3,8';
-            Fit_Param_Map = 'AMPLITUDE, PEAK, HWHM';
-            Fit_Param_IGuess = '1000000,PEAK,PEAK*0.3';
-            Fit_Param_Limit_Min = '10, PEAK-0.2*PEAK, 0.1*PEAK';
-            Fit_Param_Limit_Max = '10000000, PEAK+0.2*PEAK, 0.70*PEAK';
-            Fit_Range = 'PEAK-0.57*PEAK, 3*PEAK';
-            #For ClustSize Sel 1 to 20 - Peak Only
-            #-----------------
-            #Fit_Formula = '[0]*TMath::CauchyDist(x, [1], [2])+pol2(3)';
+            #Fit_Formula = '[0]*TMath::CauchyDist(x, [1], [2])+pol5(3)';
             #Fit_Formula_Sig = '[0]*TMath::CauchyDist(x, [1], [2])';
             #Fit_Formula_Sig_Param_Idx_Range = '0,2';
-            #Fit_Formula_Bkg = 'pol2';
-            #Fit_Formula_Bkg_Param_Idx_Range = '3,5';
+            #Fit_Formula_Bkg = 'pol5';
+            #Fit_Formula_Bkg_Param_Idx_Range = '3,8';
             #Fit_Param_Map = 'AMPLITUDE, PEAK, HWHM';
             #Fit_Param_IGuess = '1000000,PEAK,PEAK*0.3';
             #Fit_Param_Limit_Min = '10, PEAK-0.2*PEAK, 0.1*PEAK';
             #Fit_Param_Limit_Max = '10000000, PEAK+0.2*PEAK, 0.70*PEAK';
-            #Fit_Range = 'PEAK-0.5*PEAK, PEAK+0.5*PEAK';
+            #Fit_Range = 'PEAK-0.57*PEAK, 3*PEAK';
+            #For ClustSize Sel 1 to 20 - Peak Only
+            #-----------------
+            Fit_Formula = '[0]*TMath::CauchyDist(x, [1], [2])+pol2(3)';
+            Fit_Formula_Sig = '[0]*TMath::CauchyDist(x, [1], [2])';
+            Fit_Formula_Sig_Param_Idx_Range = '0,2';
+            Fit_Formula_Bkg = 'pol2';
+            Fit_Formula_Bkg_Param_Idx_Range = '3,5';
+            Fit_Param_Map = 'AMPLITUDE, PEAK, HWHM';
+            Fit_Param_IGuess = '1000000,PEAK,PEAK*0.3';
+            Fit_Param_Limit_Min = '10, PEAK-0.2*PEAK, 0.1*PEAK';
+            Fit_Param_Limit_Max = '10000000, PEAK+0.2*PEAK, 0.70*PEAK';
+            Fit_Range = 'PEAK-0.5*PEAK, PEAK+0.5*PEAK';
             #For ClustSize Sel 2 - Peak w/partial BKG
             #-----------------
             #Fit_Formula = '[0]*TMath::CauchyDist(x, [1], [2])+pol5(3)';
