@@ -1,39 +1,48 @@
 [BEGIN_COMP_INFO]
     #Observable
     ####################################
-    Obs_Name = 'clustADC';
+    Obs_Name = 'clustPos';
     Obs_Eta = '4';
-    Obs_Phi = '2';
+    Obs_Phi = '-1';
     Obs_Slice = '-1';
     #Input Config
     ####################################
-    Input_Identifier = 'ClustSize';
+    Input_Identifier = 'ClustTime';
     #Output Config
     ####################################
-    #Output_File_Name = 'GE11-VII-L-CERN-0002_ClustSize_Comparison.root';
-    Output_File_Name = 'test.root';
+    Output_File_Name = 'GE11-VII-L-CERN-0002_ClustTime_Comparison.root';
     Output_File_Option = 'UPDATE';
     #Visualizer Config
     ####################################
     Visualize_AutoSaveImages = 'true';
     Visualize_DrawNormalized = 'false';
-    Visualize_DrawOption = "B"
+    Visualize_DrawOption = "E1"
     Visualize_DrawPhiLines = 'false';
 [END_COMP_INFO]
 [BEGIN_RUN_LIST]
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_ClustSize1to20_FitStyle_Comparison.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_ClustSize_Comparison.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_14050kEvt_ClustTime1to30_ClustSize1to20_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime1to30_ClustSize1to20_Ana.root
-data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1_Ana.root
+#========Cluster Time========
+data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime1to30_ClustSize1to20_Ana.root
 data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1to20_Ana.root
+#========Cluster Size========
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1to20_Ana.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1_Ana.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2_AnaPkNPartialBKGFit.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize3_AnaWithPkNPartialBKGFit.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize4_AnaWithPkBrem.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize5_AnaWithPkBrem.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize6_AnaWithPkBrem.root
+#========Fit Style Comparison========
 #data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1to20_AnaWithPkFitOnly.root
 #data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1to20_AnaWithPkNBkgFit.root
 #data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1to20_AnaWithPkNPartialBKGFit.root
-data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2_NewAna.root
-data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize3_Ana.root
-data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize4_Ana.root
-data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize5_Ana.root
-data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize6_Ana.root
+#========Cluster Size Inclusive Range========
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to3_AnaWithPkNPartialBKGFit.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to6_AnaWithPkNPartialBKGFit.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to10_AnaWithPkNPartialBKGFit.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to15_AnaWithPkNPartialBKGFit.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to20_AnaWithPkNPartialBKGFit.root
+#========Number of Slices========
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to10_Slices16_AnaWithPkNPartialBKGFit.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to10_AnaWithPkNPartialBKGFit.root
+#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to10_Slices64_AnaWithPkNPartialBKGFit.root
 [END_RUN_LIST]
