@@ -1,62 +1,36 @@
 [BEGIN_RUN_INFO]
     	#Config Files
 	####################################
-	#Config_Analysis = 'config/configAnalysis.cfg';
-	#Config_Analysis = 'config/configAnalysis_Slices16.cfg';
-	Config_Analysis = 'config/configAnalysis_Slices64.cfg';
+	Config_Analysis = 'config/configAnalysis.cfg';
 	Config_Mapping = 'config/Mapping_GE11-VII-L.cfg';
-    #Detector
-    ####################################
-    Detector_Name = 'GE11-VII-L-CERN-0002';
+    	#Detector
+    	####################################
+    	Detector_Name = 'GE11-VII-L-CERN-0002';
 	#Input Config
 	####################################
-	Input_Identifier = 'Run';
-	#Input_Is_Frmwrk_Output = 'false';   #indicates we are running on input created by framework
-	Input_Is_Frmwrk_Output = 'true';   #indicates we are running on input created by framework
+	Input_Is_Frmwrk_Output = 'false';   #indicates we are running on input created by frameowrk
 	#Output Config
 	####################################
-	#Output_File_Name = 'GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_AllEvt_ClustTime1to30_ClustSize5_Ana.root';
+	#Output_File_Name = 'GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1to20_AnaWithRunHistory.root';
 	Output_File_Name = 'test.root';
 	Output_File_Option = 'RECREATE';
-	#Output_Individual = 'false';        #must be set to true in re-run mode
-	Output_Individual = 'true';        #must be set to true in re-run mode
+	Output_Individual = 'false';        #must be set to true in re-run mode
 	#Analysis Steps
 	####################################
 	Ana_Reco_Clusters = 'false';
-	#Ana_Hits = 'true';
 	Ana_Hits = 'false';
 	Ana_Clusters = 'true';
 	Ana_Fitting = 'true';
-	#Ana_Fitting = 'false';
 	#Visualizer Config
 	####################################
 	Visualize_Plots = 'true';
-   	Visualize_AutoSaveImages = 'false';
-   	Visualize_DrawPhiLines = 'true';
+    	Visualize_AutoSaveImages = 'false';
+    	Visualize_DrawPhiLines = 'true';
 [END_RUN_INFO]
 [BEGIN_RUN_LIST]
-#======Inclusive GE1/1-VII-L-CERN-0002======
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1to20_Ana.root
-#======Cluster Size Specific GE1/1-VII-L-CERN-0002======
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize1_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize3_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize4_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize5_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize6_Ana.root
-#======Inclusive Cluster Range Study GE1/1-VII-L-CERN-0002======
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to3_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to6_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to10_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to15_Ana.root
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to20_Ana.root
-#======Inclusive Cluster Range Study GE1/1-VII-L-CERN-0002======
-#data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to10_Slices16_Ana.root
-data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV100uA_580uA_15004kEvt_ClustTime6to27_ClustSize2to10_Slices64_Ana.root
-#======Good List GE1/1-VII-L-CERN-0002======
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run086_Physics_RandomTrigger_XRay40kV100uA_580uA_224kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run087_Physics_RandomTrigger_XRay40kV100uA_580uA_154kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run088_Physics_RandomTrigger_XRay40kV100uA_580uA_134kEvt_dataTree.root
+/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run086_Physics_RandomTrigger_XRay40kV100uA_580uA_224kEvt_dataTree.root
+/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run087_Physics_RandomTrigger_XRay40kV100uA_580uA_154kEvt_dataTree.root
+/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run088_Physics_RandomTrigger_XRay40kV100uA_580uA_134kEvt_dataTree.root
 #/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run089_Physics_RandomTrigger_XRay40kV100uA_580uA_136kEvt_dataTree.root
 #/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run090_Physics_RandomTrigger_XRay40kV100uA_580uA_131kEvt_dataTree.root
 #/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run091_Physics_RandomTrigger_XRay40kV100uA_580uA_143kEvt_dataTree.root
@@ -115,53 +89,4 @@ data/clustSelStudy/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Summary_Physics_Ran
 #/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run146_Physics_RandomTrigger_XRay40kV99uA_580uA_221kEvt_dataTree.root
 #/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run147_Physics_RandomTrigger_XRay40kV99uA_580uA_296kEvt_dataTree.root
 #/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run148_Physics_RandomTrigger_XRay40kV99uA_580uA_124kEvt_dataTree.root
-#======Gas Flow Rate Study GE1/1-VII-L-CERN-0002======
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run149_Physics_RandomTrigger_XRay20kV100uA_580uA_HighFlowRate_314kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run150_Physics_RandomTrigger_XRay20kV100uA_580uA_HighFlowRate_500kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run151_Physics_RandomTrigger_XRay20kV100uA_580uA_HighFlowRate_205kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run152_Physics_RandomTrigger_XRay30kV100uA_580uA_HighFlowRate_409kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run153_Physics_RandomTrigger_XRay30kV100uA_580uA_HighFlowRate_500kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run154_Physics_RandomTrigger_XRay30kV100uA_580uA_HighFlowRate_103kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run155_Physics_RandomTrigger_XRay40kV99uA_580uA_HighFlowRate_405kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run156_Physics_RandomTrigger_XRay40kV99uA_580uA_HighFlowRate_429kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run157_Physics_RandomTrigger_XRay40kV99uA_580uA_HighFlowRate_203kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run158_Physics_RandomTrigger_XRay50kV79uA_580uA_HighFlowRate_112kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run159_Physics_RandomTrigger_XRay50kV79uA_580uA_HighFlowRate_25kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run160_Physics_RandomTrigger_XRay50kV79uA_580uA_HighFlowRate_53kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run161_Physics_RandomTrigger_XRay40kV99uA_580uA_InversedSupplyExhaust_262kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run162_Physics_RandomTrigger_XRay40kV99uA_580uA_InversedSupplyExhaust_334kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run163_Physics_RandomTrigger_XRay40kV99uA_580uA_InversedSupplyExhaust_104kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-L-CERN-0002/GE11-VII-L-CERN-0002_Run164_Physics_RandomTrigger_XRay40kV99uA_580uA_InversedSupplyExhaust_316kEvt_dataTree.root
-#======Framework Output GE1/1-VII-S-CERN-0002======
-#data/clustSelStudy/GE11-VII-S-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV99uA_580uA_5343kEvt_ClustTime6to18_ClustSize1to20_Ana.root
-#data/clustSelStudy/GE11-VII-S-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV99uA_580uA_5343kEvt_ClustTime6to18_ClustSize2to20_Ana.root
-#data/clustSelStudy/GE11-VII-S-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV99uA_580uA_5343kEvt_ClustTime6to19_ClustSize3to20_Ana.root
-#data/clustSelStudy/GE11-VII-S-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV99uA_580uA_5343kEvt_ClustTime7to20_ClustSize4to20_Ana.root
-#data/clustSelStudy/GE11-VII-S-CERN-0002_Summary_Physics_RandTrig_AgXRay40kV99uA_580uA_5343kEvt_ClustTime7to20_ClustSize5to20_Ana.root
-#======Bad Runs GE1/1-VII-S-CERN-0002======
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0134_Physics_RandomTrigger_XRay40kV99uA_580uA_44kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0135_Physics_RandomTrigger_XRay40kV99uA_580uA_500kEvt_dataTree.root
-#======Good List GE1/1-VII-S-CERN-0002======
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0137_Physics_RandomTrigger_XRay40kV99uA_580uA_207kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0138_Physics_RandomTrigger_XRay40kV99uA_580uA_113kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0139_Physics_RandomTrigger_XRay40kV99uA_580uA_37kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0140_Physics_RandomTrigger_XRay40kV99uA_580uA_500kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0141_Physics_RandomTrigger_XRay40kV99uA_580uA_137kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0142_Physics_RandomTrigger_XRay40kV99uA_580uA_23kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0143_Physics_RandomTrigger_XRay40kV99uA_580uA_148kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0144_Physics_RandomTrigger_XRay40kV99uA_580uA_500kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0145_Physics_RandomTrigger_XRay40kV99uA_580uA_178kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0146_Physics_RandomTrigger_XRay40kV99uA_580uA_55kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0147_Physics_RandomTrigger_XRay40kV99uA_580uA_113kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0148_Physics_RandomTrigger_XRay40kV99uA_580uA_500kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0149_Physics_RandomTrigger_XRay40kV99uA_580uA_89kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0150_Physics_RandomTrigger_XRay40kV99uA_580uA_58kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0151_Physics_RandomTrigger_XRay40kV99uA_580uA_214kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0152_Physics_RandomTrigger_XRay40kV99uA_580uA_53kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0153_Physics_RandomTrigger_XRay40kV99uA_580uA_187kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0154_Physics_RandomTrigger_XRay40kV99uA_580uA_500kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0155_Physics_RandomTrigger_XRay40kV99uA_580uA_69kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0156_Physics_RandomTrigger_XRay40kV99uA_580uA_500kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0157_Physics_RandomTrigger_XRay40kV99uA_580uA_118kEvt_dataTree.root
-#/afs/cern.ch/work/d/dorney/CMS_GEM/Data/QC5/GE11-VII-S-CERN-0002/GE11-VII-S-CERN-0002_Run0158_Physics_RandomTrigger_XRay40kV99uA_580uA_500kEvt_dataTree.root
 [END_RUN_LIST]
