@@ -13,7 +13,7 @@
 	#Analysis Steps
 	####################################
 	Ana_Reco_Clusters = 'false';
-	Ana_Hits = 'false';
+	Ana_Hits = 'true';
 	Ana_Clusters = 'true';
 	Ana_Fitting = 'false';		    #Do not perform the fitting; input file is a subset of the total dataset
 	#Visualizer Config
